--- a/src/host/templates/data_stream.html
+++ b/src/host/templates/data_stream.html
@@ -174,7 +174,6 @@
     <div>    
         <h1 class = "green-text">Select serial writer: </h1>
         <select id="serial_writer_dropdown"></select>
-
         <h3 class="green-text"> Configure the serial writer: </h3>
         <div class="container">
             <div class="box_style">
@@ -209,102 +208,23 @@
             </tbody>
         </thead>
     </table>
-
-    <canvas id="myLineChart" width="400" height="100"></canvas>
+    
+    <h1 id="debug_box" class = 'green-text'></h1>
+    <!-- Grid container for charts -->
+    <div id="graphs" style="display: grid; grid-template-columns: auto auto;">
+    </div>
+    
 
     <script>
         // Call the populateDropdown function when the page loads
         window.addEventListener('load', get_serial_listener_drop_down);
         window.addEventListener('load', get_serial_writer_drop_down);
         window.addEventListener('load', update_serial_status);
-    //     var ctx = document.getElementById('myLineChart').getContext('2d');
-    //     var lineChart = new Chart(ctx, {
-    //         type: 'line',
-    //         data: {
-    //             labels: [],  // X-axis labels (timestamps)
-    //             datasets: [{
-    //                 label: 'Data received on the serial port (bytes)',
-    //                 data: [],  // Y-axis data points
-    //                 borderColor: 'rgba(75, 192, 192, 1)',
-    //                 borderWidth: 1,
-    //                 fill: false
-    //             }]
-    //         },
-    //         options: {
-    //             scales: {
-    //                 x: [{
-    //                     type: 'linear',
-    //                     position: 'bottom'
-    //                 }]
-    //             }
-    //         }
-    //     });
-
-    //     function updateLineChart(dataList) {
-    //         var labels = lineChart.data.labels;
-    //         var datasetData = lineChart.data.datasets[0].data;
-
-    //         // Assuming data is an array of Y-axis values
-    //         dataList.forEach(function(data) {
-    //             datasetData.push(data.bytes);
-
-    //             // Limit the number of data points to display
-    //             if (labels.length >= 10) {
-    //                 labels.shift();  // Remove the oldest label
-    //                 datasetData.shift();  // Remove the oldest data point
-    //             }
-
-    //             labels.push(data.time);  // X-axis label (timestamp)
-    //         });
-    //         // Update the chart
-    //         lineChart.update();
-    //     }
-
-    //     // Update the line chart every second
-    //     setInterval(function() {
-    //         fetch('/serial_running_listener')
-    //             .then(response => response.text())
-    //             .then(data => {
-    //                 if (data == 'Online')
-    //                 {
-    //                     var status = document.getElementById('reader_status');
-    //                     status.classList.remove('status-red');
-    //                     status.classList.add('status-green');
-    //                     document.getElementById('reader_status_text').innerText = "Reader Online";   
-    //                 }
-    //                 else
-    //                 {
-    //                     var status = document.getElementById('reader_status');
-    //                     status.classList.remove('status-green');
-    //                     status.classList.add('status-red');
-    //                 }
-    //             });
-    //         fetch('/serial_running_writer')
-    //             .then(response => response.text())
-    //             .then(data => {
-    //                 if (data == 'Online')
-    //                 {
-    //                     var status = document.getElementById('writer_status');
-    //                     status.classList.remove('status-red');
-    //                     status.classList.add('status-green');
-
-    //                     fetch('/get_serial_info_update') 
-    //                         .then(response => response.json())
-    //                         .then(data => {
-    //                             updateLineChart(data);
-    //                         })
-    //                         .catch(error => {
-    //                             console.error('Error fetching data:', error);
-    //                         });
-    //                 }
-    //                 else
-    //                 {
-    //                     var status = document.getElementById('writer_status');
-    //                     status.classList.remove('status-green');
-    //                     status.classList.add('status-red');
-    //                 }
-    //             });
-    //     }, 1000);  // Update every 1000 milliseconds (1 second) 
+        // Make the graphs
+        makeGraphs();
+        // Fetch data and update the graphs every second
+        setInterval(updateGraphs, 1000);
+        
     </script> 
 </body>
 </html>
