--- a/src/host/templates/Command.html
+++ b/src/host/templates/Command.html
@@ -111,11 +111,15 @@
             background-color: #f5f5f5;
             cursor: pointer;
         }
+        /* Style for the container div */
+        .horizontal-container {
+            display: flex; /* Use flexbox layout */
+        }
     </style>
 </head>
 <body>
     <div class="horizontal-container">
-        <div="item"><h1 class="white-text">CSE Space Craft Emulator Command Interface</h1>
+        <h1 class="white-text">CSE Space Craft Emulator Command Interface</h1>
     </div>
     <div class="tab-container">
         <div class="tab" onclick="open_tab('Status Report')">Status Report</div>
