--- a/src/host/templates/Command.html
+++ b/src/host/templates/Command.html
@@ -6,116 +6,8 @@
     <title>https://usu.cse.spacecraftemulator.com</title>
     <script src="page_manigure.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <style>
-        body{
-            background-color: #050505;
-        }
-        .box_style {
-            background-color: #050505;
-            padding: 20px;
-            margin-left: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgb(255, 254, 254);
-            width: 80%;
-            max-width: 600px;
-            min-width: 500px;
-        }
-        label {
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            box-sizing: border-box;
-            border: 1px solid #ccc; 
-            border-radius: 5px;
-        }
-        .button_format {
-            background-color: #4caf50;
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .white-text{
-            color: #ccc;
-        }
-        .green-text{
-            color: green;
-        }
-        .orange-text{
-            color: rgb(229, 94, 10);
-        }
-        .blue-text{
-            color: blue; /* Set text color to blue */
-        }
-        .nice_teal{
-            color: rgb(59, 181, 226);
-        }
-        /* Style for the tabs container */
-        .tab-container {
-            display: flex;
-        }
-        .container {
-            display: flex;
-            margin-bottom: 10px;
-            margin-top: 10px;
-            border-radius: 5px;
-            justify-content: left;
-        }
-
-        /* Style for the individual tabs */
-        .tab {
-            padding: 10px;
-            background-color: rgb(71, 56, 239);
-            cursor: pointer;
-            border: 1px solid #30a6ea;
-            border-radius: 5px 5px 0 0;
-            margin-right: 2px;
-            box-shadow: 0 0 10px rgb(255, 254, 254);
-        }
-
-        /* Style for the content inside the tabs */
-        .tab-content {
-            display: none;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 0 0 5px 5px;
-        }
-
-        /* Show the content of the selected tab */
-        .tab-content.active {
-            display: block;
-        }
-        /* Style for individual items within the container */
-        .item {
-            margin-right: 10px; /* Optional: Add margin between items */
-        }
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-            box-shadow: 0 0 2px rgb(255, 254, 254);
-        }
-
-        tr:hover {
-            background-color: #f5f5f5;
-            cursor: pointer;
-        }
-        /* Style for the container div */
-        .horizontal-container {
-            display: flex; /* Use flexbox layout */
-        }
-    </style>
+    <!-- Link to CSS file -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <div class="horizontal-container">
