--- a/src/host/templates/sensor.html
+++ b/src/host/templates/sensor.html
@@ -5,85 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>https://usu.cse.spacecraftemulator.com</title>
     <script src="page_manigure.js"></script>
-    <style>
-        body{
-            background-color: #050505;
-        }
-        form {
-            background-color: #050505;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgb(255, 254, 254);
-            width: 80%;
-            max-width: 400px;
-        }
-        label {
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            box-sizing: border-box;
-            border: 1px solid #ccc; 
-            border-radius: 5px;
-        }
-
-        input[type="submit"] {
-            background-color: #4caf50;
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-        .white-text{
-            color: #ccc;
-        }
-        /* Style for the tabs container */
-        .tab-container {
-            display: flex;
-        }
-
-        /* Style for the individual tabs */
-        .tab {
-            padding: 10px;
-            background-color: rgb(71, 56, 239);
-            cursor: pointer;
-            border: 1px solid #30a6ea;
-            border-radius: 5px 5px 0 0;
-            margin-right: 2px;
-            box-shadow: 0 0 10px rgb(255, 254, 254);
-        }
-
-        /* Style for the content inside the tabs */
-        .tab-content {
-            display: none;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 0 0 5px 5px;
-        }
-
-        /* Show the content of the selected tab */
-        .tab-content.active {
-            display: block;
-        }
-        /* Style for the container div */
-        .horizontal-container {
-            display: flex; /* Use flexbox layout */
-        }
-
-        /* Style for individual items within the container */
-        .item {
-            margin-right: 10px; /* Optional: Add margin between items */
-        }
-    </style>
+    <!-- Link to CSS file -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <div class="horizontal-container">
@@ -94,5 +17,21 @@
         <div class="tab" onclick="open_tab('Data Stream')">Data Stream</div>
         <div class="tab" onclick="open_tab('Command')">Command</div>
     </div>
+    <table>
+        <thead>
+            <tr class = "orange-text">
+                <th>Name</th>
+                <th>Status</th>
+                <th>Taps (listeners)</th>
+            </tr>
+            <tbody id = "sensors_status_report">
+                <!-- Table body will be populated dynamically -->
+            </tbody>
+        </thead>
+    </table>
+    <script>
+        //update the sensor status table
+        setInterval(update_sensor_status, 1000);
+    </script>
 </body>
 </html>
