working on unit test, server updates, and adding sessions (session not working yet)

--- a/src/host/templates/Command.html
+++ b/src/host/templates/Command.html
@@ -17,6 +17,8 @@
         <div class="tab" onclick="open_tab('Status Report')">Status Report</div>
         <div class="tab" onclick="open_tab('Data Stream')">Data Stream</div>
         <div class="tab" onclick="open_tab('Sensor')">Sensor</div>
+        <div class="tab" onclick="open_tab('unit_testing')">Passed Unit test</div>
+        <div class="tab" onclick="open_tab('failed_test')">failed test</div>
     </div>
     <h2 class="green-text"> Commands: </h2>
     <table>
