--- a/src/host/templates/sensor.html
+++ b/src/host/templates/sensor.html
@@ -16,6 +16,10 @@
         <div class="tab" onclick="open_tab('Status Report')">Status Report</div>
         <div class="tab" onclick="open_tab('Data Stream')">Data Stream</div>
         <div class="tab" onclick="open_tab('Command')">Command</div>
+        <div class="tab" onclick="open_tab('unit_testing')">Passed Unit test</div>
+        <div class="tab" onclick="open_tab('failed_test')">failed test</div>
+
+
     </div>
     <table>
         <thead>
