--- a/src/host/templates/data_stream.html
+++ b/src/host/templates/data_stream.html
@@ -17,6 +17,10 @@
         <div class="tab" onclick="open_tab('Status Report')">Status Report</div>
         <div class="tab" onclick="open_tab('Command')">Command</div>
         <div class="tab" onclick="open_tab('Sensor')">Sensor</div>
+        <div class="tab" onclick="open_tab('unit_testing')">Passed Unit test</div>
+        <div class="tab" onclick="open_tab('failed_test')">failed test</div>
+
+
     </div>
     <div>
         <h1 class = "green-text">Select serial listener: </h1>
