I belive I fixed the long term crash bugg

--- a/src/host/templates/data_stream.html
+++ b/src/host/templates/data_stream.html
@@ -37,19 +37,19 @@
         </thead>
     </table>
     <!-- Grid container for charts -->
-    <div id="graphs" style="display: grid; grid-template-columns: auto auto;">
+    <!-- <div id="graphs" style="display: grid; grid-template-columns: auto auto;">
     </div>
-    
+     -->
 
     <script>
         // Call the populateDropdown function when the page loads
         window.addEventListener('load', update_serial_status);
         // Make the graphs
-        makeGraphs();
-        // Fetch data and update the graphs every second
-        setInterval(updateGraphs, 1000);
-        //update the serial status
-        setInterval(update_serial_status, 1000);
+        // makeGraphs();
+        // // Fetch data and update the graphs every second
+        // setInterval(updateGraphs, 1000);
+        // //update the serial status
+        // setInterval(update_serial_status, 1000);
         
     </script> 
 </body>
